# PromptVerse

./: LICENSE  Readme.md  app.py  example.py  generate_report.py  gradio_ui.py  prompt_core_executor.py  pyproject.toml  requirements.txt  sample.py  session.py  session_maintenance.py  setup.py  smart_prompt.py  temp.py  validations.py
PromptVerse/: __init__.py  gradio_ui.py  prompt_core_executor.py  prompt_verse.py
PromptVerse/prompt_lib/: chat_summary_prompt.py  prompt_lib_description.csv
prompt-verse/: LICENSE  README.md  pyproject.toml  requirements.txt  sample.py
prompt-verse/prompt_verse/: __init__.py  gradio_ui.py  prompt_core_executor.py  prompt_maintenance.py  prompt_verse.py  session.py
prompt-verse/prompt_verse/prompt_lib/: context_question_answering_prompt.py  few_shot_prompt.py  language_detection_prompt.py  sentiment_analysis_prompt.py  summarization_prompt.py  topic_classification_prompt.py  translation_prompt.py  zero_shot_prompt.py
prompt_lib/: language_detection_prompt.py  topic_classification_prompt.py
src/: __init__.py  prompt_verse.py  session_maintenance.py
src/prompt_lib/: sentiment_analysis_prompt.py  summarization_prompt.py  zero_shot_prompt.py
