[tool.poetry]
name = "prompt-verse"
version = "1.0.1"
description = "The PromptVerse package is designed to enhance the capabilities of developers in writing prompts, logging them, and providing a prompt registry."
authors = ["Krishna Chaitanya Gollapudi <krsna.sri1@gmail.com>"]
readme = "README.md"
packages = [{include = "prompt_verse"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.28.1"
aiofiles = "22.1.0"
aiohttp = "3.8.4"
altair = "5.0.1"
better-profanity = "0.7.0"
docutils = "0.14"
gradio = "3.36.1"
huggingface-hub = "0.16.4"
langchain = "0.0.230"
openai = "0.27.8"
pandas = "2.0.3"
tiktoken = "0.4.0"
joblib = "^1.3.1"
certifi = "2023.5.7"
gradio-client = "0.2.8"
jsonschema = "4.18.1"
jsonschema-specifications = "2023.6.1"
keyring = "23.9.0"
referencing = "0.29.1"
rpds-py = "0.8.10"
urllib3 = "1.26.0"
zipp = "3.16.0"
fsspec = "2023.6.0"
clyent = "1.2.1"
numpy = "1.24"
nbformat = "5.4.0"
pyyaml = "6.0"
httpx = "0.23.3"
dataclasses-json = "0.5.9"
ffmpy = "0.3.0"
fonttools = "4.40.0"
frozenlist = "1.3.3"
httpcore = "0.16.3"
marshmallow = "3.19.0"
sqlalchemy = "2.0.18"
uvicorn = "0.22.0"
websockets = "10.4"
black = "22.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
